# template_telegram_bot

./: .gitignore  Dockerfile  constants.py  docker-compose.yml  loader.py  main.py  pyproject.toml  requirements.txt
env/: bot.env.template  log.env.template
handlers/: echo.py
