[project]
name = "template-telegram-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "evgen"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "pytelegrambotapi (>=4.29.1,<5.0.0)",
    "aiohttp (>=3.13.2,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
